--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -15,16 +15,18 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="110dp"
+            android:layout_width="100dp"
             android:layout_marginHorizontal="10dp"
             app:cardCornerRadius="25dp"
             android:layout_marginBottom="120dp"
             app:cardElevation="0dp"
-            android:layout_height="110dp">
+            android:layout_height="100dp">
             <ImageView
                 android:layout_width="match_parent"
-                android:src="@drawable/ic_power"
-                app:srcCompat="@drawable/ic_power"
+                android:src="@android:drawable/ic_lock_power_off"
+                android:tint="@color/black"
+                app:tint="@color/black"
+                app:srcCompat="@android:drawable/ic_lock_power_off"
                 android:layout_height="match_parent"/>
         </androidx.cardview.widget.CardView>
 
