--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -23,26 +23,23 @@
             android:layout_height="100dp">
             <ImageView
                 android:layout_width="match_parent"
-                android:src="@android:drawable/ic_lock_power_off"
-                android:tint="@color/black"
-                app:tint="@color/black"
-                app:srcCompat="@android:drawable/ic_lock_power_off"
+                android:src="@drawable/app_icon"
                 android:layout_height="match_parent"/>
         </androidx.cardview.widget.CardView>
+
 
 
 
     </LinearLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
         android:layout_marginBottom="30dp"
-        android:theme="@style/splashScreen"
         android:id="@+id/greetings"
-        android:fontFamily="@font/aguafina_script"
-        android:text="Handcrafted  by  DevAsh"
+        android:textAlignment="center"
+
+        android:text="B Y   D E V A S H"
         android:textSize="20dp" />
 </RelativeLayout>
