--- a/keyOS/res/layout/header_contact_listtile.xml
+++ b/keyOS/res/layout/header_contact_listtile.xml
@@ -79,6 +79,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:focusable="true"
+                android:clickable="true"
+                android:orientation="vertical"
+                android:id="@+id/playstoreCover"
+                android:layout_height="match_parent"/>
         </RelativeLayout>
 
     </LinearLayout>
