--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -17,9 +17,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="100dp"
             android:layout_marginHorizontal="10dp"
-            app:cardCornerRadius="25dp"
+            app:cardCornerRadius="20dp"
             android:layout_marginBottom="120dp"
-            app:cardElevation="0dp"
             android:layout_height="100dp">
             <ImageView
                 android:layout_width="match_parent"
@@ -39,7 +38,7 @@
         android:layout_marginBottom="30dp"
         android:id="@+id/greetings"
         android:textAlignment="center"
-
-        android:text="B Y   D E V A S H"
-        android:textSize="20dp" />
+        android:textColor="#50000000"
+        android:text="Developed by © DevAsh"
+        android:textSize="18dp" />
 </RelativeLayout>
