--- a/res/anim/fade_out_short.xml
+++ b/res/anim/fade_out_short.xml
@@ -18,7 +18,9 @@
 */
 -->
 
-<alpha xmlns:android="http://schemas.android.com/apk/res/android" android:interpolator="@android:interpolator/accelerate_quad"
+<alpha
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:interpolator/accelerate_quad"
     android:fromAlpha="1.0"
     android:toAlpha="0.0"
     android:duration="150"
