--- a/keyOS/res/layout/fragment_display_qr.xml
+++ b/keyOS/res/layout/fragment_display_qr.xml
@@ -15,23 +15,31 @@
         android:layout_marginHorizontal="10dp"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="20dp"
-            android:layout_height="400dp">
-            <ImageView
+            android:orientation="vertical"
+            android:background="@color/colorPrimary"
+            android:id="@+id/shareContent"
+            android:layout_height="wrap_content">
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:id="@+id/qrImage"
+                android:layout_marginHorizontal="20dp"
+                android:layout_height="400dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:id="@+id/qrImage"
+                    android:layout_height="wrap_content"/>
+                <include android:id="@+id/loadingScreen" layout="@layout/layout_loading_screen"/>
+            </RelativeLayout>
+            <TextView
+                android:paddingHorizontal="20dp"
+                android:gravity="center"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:text="Scan this KeyOS Qr code to apply same settings in your KeyOS device"
                 android:layout_height="wrap_content"/>
-            <include android:id="@+id/loadingScreen" layout="@layout/layout_loading_screen"/>
-        </RelativeLayout>
-        <TextView
-            android:paddingHorizontal="20dp"
-            android:gravity="center"
-            android:layout_marginBottom="20dp"
-            android:layout_width="match_parent"
-            android:text="Scan this KeyOS Qr code to apply same settings in another KeyOS device"
-            android:layout_height="wrap_content"/>
+        </LinearLayout>
+
 
         <androidx.cardview.widget.CardView
             android:layout_marginTop="20dp"
