--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -15,11 +15,12 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
+            android:layout_width="200dp"
             android:layout_marginHorizontal="10dp"
             app:cardCornerRadius="20dp"
-            android:layout_marginBottom="120dp"
-            android:layout_height="100dp">
+            app:cardElevation="0dp"
+            android:layout_marginBottom="90dp"
+            android:layout_height="200dp">
             <ImageView
                 android:layout_width="match_parent"
                 android:src="@drawable/app_icon"
@@ -38,7 +39,6 @@
         android:layout_marginBottom="30dp"
         android:id="@+id/greetings"
         android:textAlignment="center"
-        android:textColor="#50000000"
-        android:text="Developed by © DevAsh"
-        android:textSize="18dp" />
+        android:textColor="#F97C3C"
+        android:textSize="20dp" />
 </RelativeLayout>
