--- a/keyOS/res/layout/activity_settings.xml
+++ b/keyOS/res/layout/activity_settings.xml
@@ -743,6 +743,59 @@
                       android:id="@+id/phone"
                       android:layout_height="match_parent"/>
               </RelativeLayout>
+
+              <RelativeLayout
+                  android:layout_marginTop="10dp"
+                  android:layout_width="match_parent"
+                  android:layout_height="50dp">
+                  <androidx.cardview.widget.CardView
+                      android:layout_width="35dp"
+                      android:layout_marginLeft="10dp"
+                      app:cardElevation="0dp"
+                      android:layout_centerInParent="true"
+                      android:layout_alignParentLeft="true"
+                      app:cardCornerRadius="17.5dp"
+                      android:layout_height="35dp">
+
+                      <ImageView
+                          app:srcCompat="@drawable/screen_saver"
+                          android:padding="7dp"
+                          app:tint="#FF4081"
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent">
+                      </ImageView>
+                  </androidx.cardview.widget.CardView>
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:text="Screen Saver"
+                      android:gravity="center"
+                      android:textColor="@android:color/black"
+                      android:layout_marginLeft="65dp"
+                      android:textSize="16dp"
+                      android:layout_height="match_parent"/>
+                  <LinearLayout
+                      android:layout_width="wrap_content"
+                      android:layout_centerInParent="true"
+                      android:layout_alignParentRight="true"
+                      android:layout_height="wrap_content">
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:text=""
+                          android:textSize="14dp"
+                          android:layout_marginRight="20dp"
+                          android:layout_height="wrap_content"/>
+                      <ImageView
+                          android:layout_width="20dp"
+                          app:srcCompat="@drawable/ios_forward"
+                          android:layout_height="20dp"/>
+                  </LinearLayout>
+                  <TextView
+                      android:layout_width="match_parent"
+                      android:id="@+id/screenSaver"
+                      android:layout_height="match_parent"/>
+              </RelativeLayout>
+
+
               <RelativeLayout
                   android:layout_marginTop="10dp"
                   android:layout_width="match_parent"
@@ -808,7 +861,7 @@
                       android:layout_height="35dp">
 
                       <ImageView
-                          app:srcCompat="@drawable/notification_with_bell"
+                          app:srcCompat="@drawable/notification_panel_png"
                           android:padding="6dp"
                           app:tint="#7c43bd"
                           android:layout_width="match_parent"
