--- a/keyOS/res/layout/fragment_password_prompt_sheet.xml
+++ b/keyOS/res/layout/fragment_password_prompt_sheet.xml
@@ -67,6 +67,7 @@
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="20dp"
+                android:textColor="@color/white"
                 android:layout_alignParentRight="true"
                 android:layout_height="40dp"
                 android:text="DONE"
