--- a/keyOS/res/values/styles.xml
+++ b/keyOS/res/values/styles.xml
@@ -44,18 +44,15 @@
     </style>
 
 
-    <style name="CustomDialog" parent="Theme.MaterialComponents.BottomSheetDialog">
-        <!--        <item name="background">@drawable/background_sheet</item>-->
-        <!--        <item name="android:windowBackground">@android:color/transparent</item>-->
-    </style>
 
-        <style name="MyProgressDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-            <item name="colorAccent">@color/colorAccentDark</item>
-            <item name="android:textColor">@color/white</item>
-            <item name="android:textColorPrimary">#f3f3f3</item>
-            <item name="android:colorPrimary">@color/colorAccentDark</item>
-            <item name="android:background">#424242</item>
-        </style>
+
+    <style name="MyProgressDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/colorAccentDark</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorPrimary">#f3f3f3</item>
+        <item name="android:colorPrimary">@color/colorAccentDark</item>
+        <item name="android:background">#424242</item>
+    </style>
 
 
     <style name="heading" parent="keyOS">
@@ -68,6 +65,9 @@
     <style name="AppBottomSheetDialogTheme"
         parent="Theme.Design.Light.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/AppModalStyle</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="background">@drawable/background_sheet</item>
