--- a/keyOS/res/layout/activity_edit_app.xml
+++ b/keyOS/res/layout/activity_edit_app.xml
@@ -407,6 +407,9 @@
             </LinearLayout>
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"/>
 
 
         </LinearLayout>
