added foreground service

--- a/keyOS/res/layout/activity_contacts_input.xml
+++ b/keyOS/res/layout/activity_contacts_input.xml
@@ -130,6 +130,10 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"/>
+
 
             </LinearLayout>
         </ScrollView>
