--- a/res/xml/accessibilityservice.xml
+++ b/res/xml/accessibilityservice.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:accessibilityEventTypes="typeWindowStateChanged|typeContextClicked|typeViewLongClicked|typeViewClicked"
     android:accessibilityFeedbackType="feedbackGeneric"
-    android:accessibilityFlags="flagDefault|flagRequestFilterKeyEvents"
+    android:accessibilityFlags="flagDefault|flagRequestFilterKeyEvents|flagReportViewIds|flagRetrieveInteractiveWindows"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:canRetrieveWindowContent="true"
     android:canRequestFilterKeyEvents="true"
