added dev build

--- a/keyOS/res/layout/activity_phone_calls.xml
+++ b/keyOS/res/layout/activity_phone_calls.xml
@@ -355,8 +355,8 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:padding="5dp"
-                                app:srcCompat="@drawable/whitelist_calls"
+                                android:padding="6dp"
+                                app:srcCompat="@drawable/white_list"
                                 app:tint="#fc8210"/>
                         </androidx.cardview.widget.CardView>
 
