--- a/keyOS/res/layout/activity_settings.xml
+++ b/keyOS/res/layout/activity_settings.xml
@@ -747,6 +747,58 @@
               <RelativeLayout
                   android:layout_marginTop="10dp"
                   android:layout_width="match_parent"
+                  android:layout_height="50dp">
+                  <androidx.cardview.widget.CardView
+                      android:layout_width="35dp"
+                      android:layout_marginLeft="10dp"
+                      app:cardElevation="0dp"
+                      android:layout_centerInParent="true"
+                      android:layout_alignParentLeft="true"
+                      app:cardCornerRadius="17.5dp"
+                      android:layout_height="35dp">
+
+                      <ImageView
+                          app:srcCompat="@drawable/ic_globe"
+                          android:padding="7dp"
+                          app:tint="#F69705"
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent">
+                      </ImageView>
+                  </androidx.cardview.widget.CardView>
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:text="Web Filter"
+                      android:gravity="center"
+                      android:textColor="@android:color/black"
+                      android:layout_marginLeft="65dp"
+                      android:textSize="16dp"
+                      android:layout_height="match_parent"/>
+                  <LinearLayout
+                      android:layout_width="wrap_content"
+                      android:layout_centerInParent="true"
+                      android:layout_alignParentRight="true"
+                      android:layout_height="wrap_content">
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:text=""
+                          android:textSize="14dp"
+                          android:layout_marginRight="20dp"
+                          android:layout_height="wrap_content"/>
+                      <ImageView
+                          android:layout_width="20dp"
+                          app:srcCompat="@drawable/ios_forward"
+                          android:layout_height="20dp"/>
+                  </LinearLayout>
+                  <TextView
+                      android:layout_width="match_parent"
+                      android:id="@+id/webFilter"
+                      android:layout_height="match_parent"/>
+              </RelativeLayout>
+
+
+              <RelativeLayout
+                  android:layout_marginTop="10dp"
+                  android:layout_width="match_parent"
                   android:visibility="gone"
                   android:layout_height="50dp">
                   <androidx.cardview.widget.CardView
