--- a/keyOS/res/layout/activity_web_filter.xml
+++ b/keyOS/res/layout/activity_web_filter.xml
@@ -165,7 +165,7 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:padding="6dp"
+                                android:padding="5.5dp"
                                 app:srcCompat="@drawable/white_list"
                                 app:tint="#fc8210"/>
                         </androidx.cardview.widget.CardView>
@@ -236,7 +236,7 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:padding="8dp"
+                                android:padding="7dp"
                                 app:srcCompat="@drawable/blocklist_calls"
                                 app:tint="#ec0101"/>
                         </androidx.cardview.widget.CardView>
@@ -335,8 +335,8 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:padding="6dp"
-                                app:srcCompat="@drawable/adult"
+                                android:padding="5dp"
+                                app:srcCompat="@drawable/ic_adult"
                                 />
                         </androidx.cardview.widget.CardView>
 
