--- a/keyOS/res/layout/widget_listtile_apps.xml
+++ b/keyOS/res/layout/widget_listtile_apps.xml
@@ -78,7 +78,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_marginRight="60dp"
+            android:layout_toLeftOf="@id/editApp"
             android:gravity="center_vertical"
             android:layout_toRightOf="@+id/statusContainer"
             android:layout_height="match_parent">
@@ -98,6 +98,7 @@
                 android:layout_toRightOf="@+id/statusContainer"
                 android:text="March 10 , 10:25 AM"
                 android:textSize="11dp"
+                android:layout_marginRight="15dp"
                 android:gravity="top"
                 android:id="@+id/packageName"
                 android:layout_below="@id/name"
