--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -32,13 +32,44 @@
 
     </LinearLayout>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:id="@+id/greetings"
         android:textAlignment="center"
+        android:gravity="center"
         android:textColor="#F97C3C"
-        android:textSize="20dp" />
+        android:visibility="gone"
+        android:textSize="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="By using this application, you agree to"
+            android:textSize="13dp"
+            android:layout_height="wrap_content"/>
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:textColor="@color/white"
+                android:background="@color/icon_background"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="7dp"
+                android:textStyle="bold"
+                android:textSize="14dp"
+                android:text="Accept &amp; continue"
+                android:layout_height="wrap_content"/>
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
 </RelativeLayout>
